--- a/Index.html
+++ b/Index.html
@@ -17,11 +17,10 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
   <script>
 
-    // Initial setup
     let score = 0;
     let level = 1;
+    let slicedCount = 0;
     let objects = [];
-    let slicing = false;
     let gameSpeed = 1;
     let slowMoActive = false;
 
@@ -33,9 +32,8 @@
     renderer.setSize(window.innerWidth, window.innerHeight);
     document.body.appendChild(renderer.domElement);
 
-    // Generate objects
     function createRandomObject() {
-      const geometry = new THREE.SphereGeometry(0.1 + Math.random() * 0.3);
+      const geometry = new THREE.SphereGeometry(0.2 + Math.random() * 0.3, 8, 6);
       const color = Math.random() * 0xffffff;
       const material = new THREE.MeshBasicMaterial({ color });
       const object = new THREE.Mesh(geometry, material);
@@ -46,14 +44,12 @@
       objects.push(object);
     }
 
-    // Animation loop
     function animate() {
       requestAnimationFrame(animate);
 
       objects.forEach((obj, i) => {
         obj.position.y += obj.userData.speed * gameSpeed;
 
-        // Check if object is out of bounds
         if (obj.position.y > 3) {
           scene.remove(obj);
           objects.splice(i, 1);
@@ -63,67 +59,74 @@
       renderer.render(scene, camera);
     }
 
-    // Handling interactions
-    document.addEventListener('mousedown', () => slicing = true);
-    document.addEventListener('mouseup', () => slicing = false);
-    document.addEventListener('mousemove', onPointerMove);
+    function sliceObject(object) {
+      score += 10;
+      slicedCount++;
+      document.getElementById('score').innerText = `Score: ${score}`;
 
-    function onPointerMove(event) {
-      if (!slicing) return;
+      if (object.userData.isSpecial && !slowMoActive) {
+        gameSpeed = 0.5;
+        slowMoActive = true;
+        setTimeout(() => {
+          gameSpeed = 1;
+          slowMoActive = false;
+        }, 3000);
+      }
 
-      const mouse = new THREE.Vector2(
-        (event.clientX / window.innerWidth) * 2 - 1,
-        -(event.clientY / window.innerHeight) * 2 + 1
-      );
+      createFragments(object);
+      scene.remove(object);
+      objects.splice(objects.indexOf(object), 1);
 
-      const raycaster = new THREE.Raycaster();
-      raycaster.setFromCamera(mouse, camera);
-      const intersects = raycaster.intersectObjects(objects);
-
-      if (intersects.length > 0) {
-        const object = intersects[0].object;
-        score += 10;
-        document.getElementById('score').innerText = `Score: ${score}`;
-
-        // Handle special object effect
-        if (object.userData.isSpecial && !slowMoActive) {
-          gameSpeed = 0.5;
-          slowMoActive = true;
-          setTimeout(() => {
-            gameSpeed = 1;
-            slowMoActive = false;
-          }, 3000);
-        }
-
-        scene.remove(object);
-        objects.splice(objects.indexOf(object), 1);
-
-        // Leveling up
-        if (score >= level * 100) {
-          level++;
-          document.getElementById('level').innerText = `Level: ${level}`;
-          unlockPortfolioSection(level);
-        }
+      if (slicedCount >= 5) {
+        levelUp();
+        slicedCount = 0;
       }
     }
 
-    // Unlock portfolio sections
+    function createFragments(object) {
+      const fragmentCount = 6;
+      for (let i = 0; i < fragmentCount; i++) {
+        const fragmentGeometry = new THREE.SphereGeometry(0.1, 6, 4);
+        const fragmentMaterial = object.material.clone();
+        const fragment = new THREE.Mesh(fragmentGeometry, fragmentMaterial);
+
+        fragment.position.copy(object.position);
+        fragment.userData.velocity = new THREE.Vector3(
+          (Math.random() - 0.5) * 0.2,
+          (Math.random() - 0.5) * 0.2,
+          (Math.random() - 0.5) * 0.2
+        );
+
+        scene.add(fragment);
+
+        // Move the fragment based on its velocity for a short duration
+        setTimeout(() => scene.remove(fragment), 1000);
+        objects.push(fragment);
+      }
+    }
+
+    function levelUp() {
+      level++;
+      document.getElementById('level').innerText = `Level: ${level}`;
+      unlockPortfolioSection(level);
+    }
+
     function unlockPortfolioSection(level) {
       switch (level) {
+        case 1:
+          console.log("Unlocked About section for Amit Kumar");
+          break;
         case 2:
-          console.log("Unlocking About section");
+          console.log("Unlocked Education and Experience sections");
           break;
         case 3:
-          console.log("Unlocking Education section");
+          console.log("Unlocked Skills section");
           break;
         case 4:
-          console.log("Unlocking Experience section");
+          console.log("Unlocked Projects section");
           break;
         case 5:
-          console.log("Unlocking Projects section");
-          break;
-        case 6:
-          console.log("Unlocking Contact section");
+          console.log("Unlocked Contact section");
           break;
         default:
           console.log("All sections unlocked");
@@ -131,11 +134,34 @@
       }
     }
 
-    // Generate objects at intervals
-    setInterval(createRandomObject, 800);
+    document.addEventListener('mousemove', onPointerMove);
+    document.addEventListener('touchmove', onPointerMove);
 
-    // Start the animation
+    function onPointerMove(event) {
+      const pointer = new THREE.Vector2();
+
+      if (event.touches) {
+        // For mobile touch events
+        pointer.x = (event.touches[0].clientX / window.innerWidth) * 2 - 1;
+        pointer.y = -(event.touches[0].clientY / window.innerHeight) * 2 + 1;
+      } else {
+        // For desktop mouse events
+        pointer.x = (event.clientX / window.innerWidth) * 2 - 1;
+        pointer.y = -(event.clientY / window.innerHeight) * 2 + 1;
+      }
+
+      const raycaster = new THREE.Raycaster();
+      raycaster.setFromCamera(pointer, camera);
+      const intersects = raycaster.intersectObjects(objects);
+
+      if (intersects.length > 0) {
+        sliceObject(intersects[0].object);
+      }
+    }
+
+    setInterval(createRandomObject, 800);
     animate();
+
   </script>
 </body>
 </html>
