--- a/Index.html
+++ b/Index.html
@@ -3,165 +3,41 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>3D Slice Game Portfolio</title>
-  <style>
-    body { margin: 0; overflow: hidden; font-family: Arial, sans-serif; }
-    canvas { display: block; }
-    #score, #level { position: absolute; top: 10px; left: 10px; color: white; font-size: 24px; }
-    #level { left: auto; right: 10px; }
-  </style>
+  <title>Amit Kumar's Gamified Portfolio</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div id="score">Score: 0</div>
-  <div id="level">Level: 1</div>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-  <script>
+  <div id="scoreBoard">
+    <span>Score: <span id="score">0</span></span>
+    <span>High Score: <span id="highScore">0</span></span>
+  </div>
+  
+  <div id="gameControls">
+    <button id="pauseResume">Pause</button>
+    <button id="tryAgain">Try Again</button>
+    <button id="skipLevel">Skip Level</button>
+  </div>
+  
+  <div id="gameOverMessage" class="hidden">
+    <h1>Game Over</h1>
+    <p>Your score was <span id="finalScore">0</span></p>
+    <button id="restart">Try Again</button>
+  </div>
+  
+  <header id="portfolioHeader" class="hidden">
+    <h1>Amit Kumar's Portfolio</h1>
+    <nav>
+      <a id="aboutLink" class="hidden">About</a>
+      <a id="educationLink" class="hidden">Education</a>
+      <a id="skillsLink" class="hidden">Skills</a>
+      <a id="experienceLink" class="hidden">Experience</a>
+      <a id="projectsLink" class="hidden">Projects</a>
+      <a id="contactLink" class="hidden">Contact</a>
+    </nav>
+  </header>
 
-    let score = 0;
-    let level = 1;
-    let slicedCount = 0;
-    let objects = [];
-    let gameSpeed = 1;
-    let slowMoActive = false;
+  <canvas id="gameCanvas"></canvas>
 
-    const scene = new THREE.Scene();
-    const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-    camera.position.z = 5;
-
-    const renderer = new THREE.WebGLRenderer();
-    renderer.setSize(window.innerWidth, window.innerHeight);
-    document.body.appendChild(renderer.domElement);
-
-    function createRandomObject() {
-      const geometry = new THREE.SphereGeometry(0.2 + Math.random() * 0.3, 8, 6);
-      const color = Math.random() * 0xffffff;
-      const material = new THREE.MeshBasicMaterial({ color });
-      const object = new THREE.Mesh(geometry, material);
-      object.position.set((Math.random() - 0.5) * 4, -3, 0);
-      object.userData.speed = 0.02 + Math.random() * 0.03;
-      object.userData.isSpecial = Math.random() < 0.1;
-      scene.add(object);
-      objects.push(object);
-    }
-
-    function animate() {
-      requestAnimationFrame(animate);
-
-      objects.forEach((obj, i) => {
-        obj.position.y += obj.userData.speed * gameSpeed;
-
-        if (obj.position.y > 3) {
-          scene.remove(obj);
-          objects.splice(i, 1);
-        }
-      });
-
-      renderer.render(scene, camera);
-    }
-
-    function sliceObject(object) {
-      score += 10;
-      slicedCount++;
-      document.getElementById('score').innerText = `Score: ${score}`;
-
-      if (object.userData.isSpecial && !slowMoActive) {
-        gameSpeed = 0.5;
-        slowMoActive = true;
-        setTimeout(() => {
-          gameSpeed = 1;
-          slowMoActive = false;
-        }, 3000);
-      }
-
-      createFragments(object);
-      scene.remove(object);
-      objects.splice(objects.indexOf(object), 1);
-
-      if (slicedCount >= 5) {
-        levelUp();
-        slicedCount = 0;
-      }
-    }
-
-    function createFragments(object) {
-      const fragmentCount = 6;
-      for (let i = 0; i < fragmentCount; i++) {
-        const fragmentGeometry = new THREE.SphereGeometry(0.1, 6, 4);
-        const fragmentMaterial = object.material.clone();
-        const fragment = new THREE.Mesh(fragmentGeometry, fragmentMaterial);
-
-        fragment.position.copy(object.position);
-        fragment.userData.velocity = new THREE.Vector3(
-          (Math.random() - 0.5) * 0.2,
-          (Math.random() - 0.5) * 0.2,
-          (Math.random() - 0.5) * 0.2
-        );
-
-        scene.add(fragment);
-
-        // Move the fragment based on its velocity for a short duration
-        setTimeout(() => scene.remove(fragment), 1000);
-        objects.push(fragment);
-      }
-    }
-
-    function levelUp() {
-      level++;
-      document.getElementById('level').innerText = `Level: ${level}`;
-      unlockPortfolioSection(level);
-    }
-
-    function unlockPortfolioSection(level) {
-      switch (level) {
-        case 1:
-          console.log("Unlocked About section for Amit Kumar");
-          break;
-        case 2:
-          console.log("Unlocked Education and Experience sections");
-          break;
-        case 3:
-          console.log("Unlocked Skills section");
-          break;
-        case 4:
-          console.log("Unlocked Projects section");
-          break;
-        case 5:
-          console.log("Unlocked Contact section");
-          break;
-        default:
-          console.log("All sections unlocked");
-          break;
-      }
-    }
-
-    document.addEventListener('mousemove', onPointerMove);
-    document.addEventListener('touchmove', onPointerMove);
-
-    function onPointerMove(event) {
-      const pointer = new THREE.Vector2();
-
-      if (event.touches) {
-        // For mobile touch events
-        pointer.x = (event.touches[0].clientX / window.innerWidth) * 2 - 1;
-        pointer.y = -(event.touches[0].clientY / window.innerHeight) * 2 + 1;
-      } else {
-        // For desktop mouse events
-        pointer.x = (event.clientX / window.innerWidth) * 2 - 1;
-        pointer.y = -(event.clientY / window.innerHeight) * 2 + 1;
-      }
-
-      const raycaster = new THREE.Raycaster();
-      raycaster.setFromCamera(pointer, camera);
-      const intersects = raycaster.intersectObjects(objects);
-
-      if (intersects.length > 0) {
-        sliceObject(intersects[0].object);
-      }
-    }
-
-    setInterval(createRandomObject, 800);
-    animate();
-
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
