--- a/Index.html
+++ b/Index.html
@@ -27,12 +27,11 @@
   <header id="portfolioHeader" class="hidden">
     <h1>Amit Kumar's Portfolio</h1>
     <nav>
-      <a id="aboutLink" class="hidden">About</a>
-      <a id="educationLink" class="hidden">Education</a>
-      <a id="skillsLink" class="hidden">Skills</a>
-      <a id="experienceLink" class="hidden">Experience</a>
-      <a id="projectsLink" class="hidden">Projects</a>
-      <a id="contactLink" class="hidden">Contact</a>
+      <a id="aboutLink" href="about.html" class="hidden">About</a>
+      <a id="skillsLink" href="skills.html" class="hidden">Skills</a>
+      <a id="experienceLink" href="experience.html" class="hidden">Experience</a>
+      <a id="educationLink" href="education.html" class="hidden">Education</a>
+      <a id="contactLink" href="contact.html" class="hidden">Contact</a>
     </nav>
   </header>
 
